2008-07-11  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-zero.patch: Build non-product correctly on ia64.

2008-07-11  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* Makefile.am (CACAO_VERSION): Updated to 0.99.2
	(CACAO_MD5SUM): Likewise.
	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* configure: Likewise.

2008-07-10  Joshua Sumali  <jsumali@redhat.com>

	* rt/net/sourceforge/jnlp/runtime/Boot.java: Remove restriction of only
	files ending with .jnlp being loaded. Also refactored a bit.

2008-07-08  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-security-updates.patch: New patch containing
	security updates from Sun.
	* Makefile.am: Added patch.
	* Makefile.in: Regenerated.

2008-07-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/icedtea-zero-build.patch:
	Remove previously applied parts as spotted
	by Lillian Angel.
	
2008-07-08  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (stamps/cacao.stamp): Pass CACAO_CONFIGURE_ARGS to
	 configure.
	* Makefile.in: Regenerate.
	* README: Document CACAO_CONFIGURE_ARGS.

2008-07-04  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (EXCLUDE_LIVECONNECT): New variable.
	(LIVECONNECT_DIR): Likewise.
	* Makefile.in: Regenerate.
	* rt/netscape/javascript/JSException.java: New file.
	* rt/netscape/javascript/JSObject.java: Likewise.
	* rt/netscape/javascript/JSProxy.java: Likewise.
	* rt/netscape/javascript/JSRunnable.java: Likewise.
	* rt/netscape/javascript/JSUtil.java: Likewise.

2008-07-04  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am: Fix typo.
	* Makefile.in: Regenerate.

2008-07-04  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am: Formatting fixes.
	* Makefile.in: Regenerate.

2008-07-03  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* IcedTeaPlugin.cc (IcedTeaPluginFactory::IcedTeaPluginFactory):
	Move nsILiveconnect instance creation ...
	(IcedTeaPluginFactory::Initialize): ... here.

2008-07-03  Thomas Fitzsimmons  <fitzsim@redhat.com>
