@@ -1,3 +1,12 @@
+2008-07-12  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am:
+	Switch to b30 and default to downloading OpenJDK zip.
+	* Makefile.in: Regenerated.
+	* acinclude.m4: Add USE_HG option.
+	* configure: Regenerated.
+	* configure.ac: Add ENABLE_HG macro and update e-mail address.
+
 2008-07-11  Gary Benson  <gbenson@redhat.com>
 
 	* patches/icedtea-zero.patch: Build non-product correctly on ia64.
